Добавляет решение 2й задачи

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>goit-js-hw-07</title>
   </head>
   <body>
+    <!-- Первая задача -->
     <ul id="categories">
       <li class="item">
         <h2>Животные</h2>
@@ -39,6 +40,10 @@
       </li>
     </ul>
 
+    <!-- Вторая задача -->
+    <ul id="ingredients"></ul>
+
     <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
   </body>
 </html>
