--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>goit-js-hw-07</title>
   </head>
   <body>
-    <!-- Первая задача -->
+    <!-- Task-1 -->
     <ul id="categories">
       <li class="item">
         <h2>Животные</h2>
@@ -40,8 +40,11 @@
       </li>
     </ul>
 
-    <!-- Вторая задача -->
+    <!-- Task-2 -->
     <ul id="ingredients"></ul>
+
+    <!-- Task-3 -->
+    <ul id="gallery"></ul>
 
     <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
