--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-js-hw-07</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Task-1 -->
@@ -48,5 +49,6 @@
 
     <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
+    <!-- <script src="./js/task-3.js" type="module"></script> -->
   </body>
 </html>
