--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
     <!-- Task-3 -->
     <ul id="gallery"></ul>
 
-    <script src="./js/task-1.js" type="module"></script>
-    <script src="./js/task-2.js" type="module"></script>
+    <!-- Task-4 -->
+
+    <!-- <script src="./js/task-1.js" type="module"></script> -->
+    <!-- <script src="./js/task-2.js" type="module"></script> -->
     <script src="./js/task-3.js" type="module"></script>
+    <!-- <script src="./js/task-4.js" type="module"></script> -->
   </body>
 </html>
