--- a/index.html
+++ b/index.html
@@ -48,10 +48,29 @@
     <ul id="gallery"></ul>
 
     <!-- Task-4 -->
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
+
+    <!-- Task-5 -->
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    <!-- Task-6 -->
+    <input
+      type="text"
+      id="validation-input"
+      data-length="6"
+      placeholder="Введи 6 символов"
+    />
 
     <!-- <script src="./js/task-1.js" type="module"></script> -->
     <!-- <script src="./js/task-2.js" type="module"></script> -->
-    <script src="./js/task-3.js" type="module"></script>
+    <!-- <script src="./js/task-3.js" type="module"></script> -->
     <!-- <script src="./js/task-4.js" type="module"></script> -->
+    <!-- <script src="./js/task-5.js" type="module"></script> -->
+    <script src="./js/task-5.js" type="module"></script>
   </body>
 </html>
