--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
     <!-- Task-6 -->
     <input
       type="text"
-      id="validation-input"
+      id="validation-input"      
       data-length="6"
       placeholder="Введи 6 символов"
     />
 
-    <!-- <script src="./js/task-1.js" type="module"></script> -->
-    <!-- <script src="./js/task-2.js" type="module"></script> -->
-    <!-- <script src="./js/task-3.js" type="module"></script> -->
-    <!-- <script src="./js/task-4.js" type="module"></script> -->
-    <!-- <script src="./js/task-5.js" type="module"></script> -->
+    <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
+    <script src="./js/task-3.js" type="module"></script>
+    <script src="./js/task-4.js" type="module"></script>
     <script src="./js/task-5.js" type="module"></script>
+    <script src="./js/task-6.js" type="module"></script>
   </body>
 </html>
