Добавляет решение 7й задачи

--- a/index.html
+++ b/index.html
@@ -61,10 +61,15 @@
     <!-- Task-6 -->
     <input
       type="text"
-      id="validation-input"      
+      id="validation-input"
       data-length="6"
       placeholder="Введи 6 символов"
     />
+    <br />
+    <!-- Task-7 -->
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
 
     <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
@@ -72,5 +77,6 @@
     <script src="./js/task-4.js" type="module"></script>
     <script src="./js/task-5.js" type="module"></script>
     <script src="./js/task-6.js" type="module"></script>
+    <script src="./js/task-7.js" type="module"></script>
   </body>
 </html>
