--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <span id="value">0</span>
       <button type="button" data-action="increment">+1</button>
     </div>
-
+    <br />
     <!-- Task-5 -->
     <input type="text" placeholder="Ваше имя?" id="name-input" />
     <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
@@ -78,5 +78,6 @@
     <script src="./js/task-5.js" type="module"></script>
     <script src="./js/task-6.js" type="module"></script>
     <script src="./js/task-7.js" type="module"></script>
+    <script src="./js/task-8.js" type="module"></script>
   </body>
 </html>
