--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
     <br />
     <span id="text">Абракадабра!</span>
 
+    <!-- Task-8 -->
+    <div id="controls">
+      <input type="number" min="0" max="100" step="1" />
+      <button type="button" data-action="render">Создать</button>
+      <button type="button" data-action="destroy">Очистить</button>
+    </div>
+
+    <div id="boxes"></div>
+
     <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
     <script src="./js/task-3.js" type="module"></script>
